# transfer-grokking

./: .gitattributes  .zenodo.json  AGENTS.md  CITATION.cff  README.md  adapter.py  ce_projection.py  clean_test.py  cross_model_l31.py  cross_model_probe.py  embed_patch.py  eval_l31_perplexity.py  eval_natural_adapter.py  experiment_a.py  l31_patch.py  main.py  model.py  natural_adapter.py  probe_final_phi2.py  pyproject.toml  scan_models.py  steering.py  train.py  train_small.py  utils.py  verify_fourier.py
artifacts/: curves.npz  experiment_summary.md  mod_arithmetic_labels.npy  steering_results_per_alpha.csv
artifacts/activations/: small_acts_test.npy  small_labels_test.npy
artifacts/adapter/: adapter_alpha0.0.pth  adapter_alpha0.5.pth  adapter_alpha1.0.pth  experiment_summary.md
artifacts/big/: best_model.pth
artifacts/ce_projection/: W_ce.pth  W_mse.pth  alpha_sweep.csv  ce_training_log.csv  comparison_summary.md  cos_sim_mse.npy
artifacts/cross_model/: comparison_qwen2_math_1.5b_vs_phi2.md  probe_comparison.md  qwen2_math_1.5b_L27_sweep.csv
artifacts/embed_patch/: W_emb.pth  experiment_summary.md  results.csv
artifacts/experiment_a/: experiment_summary.md  final_metrics.txt  projected_probe_acc.txt  projection_W.pth  steering_results_per_alpha.csv
artifacts/l31_patch/: alpha_sweep_l31.csv  comparison_l10_vs_l31.md  perplexity_eval.md  (+1 more)
experiments/: eval_degradation.py  interpret.py  line_a.py  line_b.py  multi_layer_patch.py  natural_adapter.py  nonlinear_adapter.py  plot_umap.py  probe_final_phi2.py  probe_phi2.py  residual_patch.py
(+43 files in other folders)
